# Knapsack

./: CMakeLists.txt  README.md  main.c  utils.c  utils.h
Algorithm/: algorithms.h  heuristics.c  hybridBranchAndBound.c  parallelBranchAndBound.c  simpleBranchAndBound.c
DataStructure/: DataStructure.h  LinkedQueue.h  LinkedStack.c  LinkedStack.h  ParallelStack.c  ParallelStack.h
IO/: IO.c  IO.h
MPI/: mpiWrapper.c  mpiWrapper.h
knapsack_data/: generate_test_data.py  knapsack_10000.out  knapsack_12.out  knapsack_20000.out  knapsack_30000.out  knapsack_9.out
